--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Just the Docs on GitHub":
-    - "//github.com/just-the-docs/just-the-docs"
+  "MoonJaehyun on GitHub":
+    - "//github.com/MoonJaehyun"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -103,8 +103,8 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # External navigation links
 nav_external_links:
-  - title: Just the Docs on GitHub
-    url: https://github.com/just-the-docs/just-the-docs
+  - title: MoonJaehyun on GitHub
+    url: https://github.com/MoonJaehyun
 
 # Footer content
 # appears at the bottom of every page's main content
