--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "ko-KR" #주요 언어
 title                    : "MJH BLOG" #사이트 탭에서 보이는 이름
 title_separator          : "-"
 subtitle                 : # 타이틀 하단 소제목
-name                     : "MoonJaehyun"
-description              : "An amazing website."
+name                     : "문재현(Moon Jaehyun)"
+description              : "꾸준함이 주는 습관"
 url                      : "https://moonjaehyun.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "MoonJaehyun/MoonJaehyun.github.io"
@@ -106,8 +106,8 @@ analytics:
 author:
   name             : "MoonJaehyun"
   avatar           :  # path of avatar image, e.g."/assets/images/bio-photo.jpg"
-  bio              : "문을 거꾸로 하면 곰."
-  location         : "Jeju, South Korea"
+  bio              : "**기록이 자산!!**<br>매일 공부하고 있습니다.<br>문을 거꾸로 하면 곰.."
+  location         : "Republic of Korea"
   email            : "jjmjh214@gmail.com"
   links:
     - label: "Email"
@@ -124,10 +124,10 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/MoonJaehyun"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/m._.jaehyun/"
 
 # Site Footer
 footer:
@@ -140,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/MoonJaehyun"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -149,7 +149,7 @@ footer:
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://www.instagram.com/m._.jaehyun/"
 
 
 # Reading Files
