--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,16 @@ main:
   - title: "Category"
     url: /categories/
   - title: "Tags"
-    url: /tags/g
+    url: /tags/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+sidebar-category:
+  - title: "카테고리"
+    children:
+      - title: "블로그"
+        url: "/blog"
+      - title: "카테고리B"
+        url:  "/CategoryB"
+      - title: "카테고리C"
+        url:  "/CategoryC"
