--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
 sidebar-category:
   - title: "카테고리"
     children:
+      - title: "인공지능공학과"
+        url:  "/ISE_staterbook"
+        category: "ise_starterbook"
       - title: "학교과제"
         url: "/assignment"
         category: "assignment"
