--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,16 +11,16 @@ sidebar-category:
   - title: "학교"
     children:
       - title: "인공지능공학과"
-        url:  "/ise_starterbook"
+        url:  "categories/ise_starterbook"
         category: "ise_starterbook"
       - title: "학교과제"
-        url: "/assignment"
+        url: "categories/assignment"
         category: "assignment"
       - title: "기타"
-        url:  "/etc"
+        url:  "categories/etc"
         category: "etc"
   - title: "프로그래밍"
     children:
       - title: "python"
-        url:  "/python"
+        url:  "categories/python"
         category: "python"
