--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,16 +11,16 @@ sidebar-category:
   - title: "학교"
     children:
       - title: "인공지능공학과"
-        url:  "categories/ise_starterbook"
+        url:  "categories/#ise_starterbook"
         category: "ise_starterbook"
       - title: "학교과제"
-        url: "categories/assignment"
+        url: "categories/#assignment"
         category: "assignment"
       - title: "기타"
-        url:  "categories/etc"
+        url:  "categories/#etc"
         category: "etc"
   - title: "프로그래밍"
     children:
       - title: "python"
-        url:  "categories/python"
+        url:  "categories/#python"
         category: "python"
