--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ sidebar-category:
   - title: "학교"
     children:
       - title: "인공지능공학과"
-        url:  "categories/#ise_starterbook"
+        url:  "categories/#ise-starterbook"
         category: "ise_starterbook"
       - title: "학교과제"
         url: "categories/#assignment"
