--- a/_config.yml
+++ b/_config.yml
@@ -290,5 +290,6 @@ defaults:
       comments: # true
       share: true
       related: true
+      sidebar_main: true
       sidebar:                  # 추가한 부분
         nav: "sidebar-category" # 추가한 부분
