--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,5 +22,5 @@ sidebar-category:
   - title: "프로그래밍"
     children:
       - title: "python"
-        url:  "/#python"
+        url:  "/python"
         category: "python"
