--- a/_config.yml
+++ b/_config.yml
@@ -292,3 +292,11 @@ defaults:
       related: true
       sidebar:                  # 추가한 부분
         nav: "sidebar-category" # 추가한 부분
+
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
