--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Introduce"
     url: /about/
+  - title: "Category"
+    url: /categories/
   - title: "Tags"
     url: /tags/
 
