--- a/_config.yml
+++ b/_config.yml
@@ -294,9 +294,9 @@ defaults:
         nav: "sidebar-category" # 추가한 부분
 
   # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
+  # - scope:
+  #     path: "_pages"
+  #     type: pages
+  #   values:
+  #     layout: single
+  #     author_profile: true
